force-app/main/default/objects/Market_Unit_Time_Zone__mdt/Market_Unit_Time_Zone__mdt.object-meta.xml
<CustomObject>
    <label>Market Unit Time Zone</label>
    <pluralLabel>Market Unit Time Zones</pluralLabel>
</CustomObject>