force-app/main/default/objects/Market_Unit_Time_Zone__mdt/fields/Default_Format_Key__c.field-meta.xml
<CustomField>
    <fullName>Default_Format_Key__c</fullName>
    <inlineHelpText>One of: ISO_8601, EU_24H, US_12H, LONG, SHORT</inlineHelpText>
    <label>Default Format Key</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>