force-app/main/default/objects/Market_Unit_Time_Zone__mdt/fields/Language_Code__c.field-meta.xml
<CustomField>
    <fullName>Language_Code__c</fullName>
    <label>Language Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>