force-app/main/default/objects/Market_Unit_Time_Zone__mdt/fields/Market_Unit_Key__c.field-meta.xml
<CustomField>
    <fullName>Market_Unit_Key__c</fullName>
    <inlineHelpText>DFJ_DK, FA_SE, Ireland</inlineHelpText>
    <label>Market Unit Key</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>