force-app/main/default/objects/Market_Unit_Time_Zone__mdt/fields/Time_Zone_Id__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone_Id__c</fullName>
    <label>Time Zone ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>